--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -29,6 +29,28 @@
       </div>
     </div>
 </div>
+<!-- Modal -->
+<div class="modal fade" id="techPop" [ngClass]="{ 'show': showModals }" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle"><img src="../../assets/icons/icons8-alert.gif"/>  New Request Alert</h5>
+          <button type="button" class="close" data-dismiss="modal" (click)="closeTechModal() " aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body"  class="alert alert-success" role="alert">
+            	<h3 >id:{{id}} </h3>
+				<h3 >category:{{category}} </h3>
+				<h3 >description:{{description}} </h3>
+        </div>
+        <div class="modal-footer" >
+          <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
+          <button type="button" class="btn btn-primary" (click)="closeTechModal()"  routerLink="/adminpage" >OK</button>
+        </div>
+      </div>
+    </div>
+</div>
 
 
 
